site/website/static/css/custom.css
body {
    font-family: Ubuntu, sans-serif;
    /* font-weight: lighter; */
    /* background-color: #002b36; */
    color: #073642;
}

.fixedHeaderContainer {
    background-color: #fdf6e3;
}

.projectTitle {
    color: #073642;
}

a.button {
    font-weight: bold;
}

.navigationSlider .slidingNav ul li a {
    color: #268bd2;
}

.navigationSlider .slidingNav ul li.siteNavGroupActive a,
.navigationSlider .slidingNav ul li.siteNavItemActive a,
.navigationSlider .slidingNav ul li a:focus,
.navigationSlider .slidingNav ul li a:hover {
    /* background: #ff5f00; */
    color: #fdf6e3;
}

.imageAlignLeft .blockImage {
    max-height: 300px;
    max-width: 300px;
}

.imageAlignRight .blockImage {
    max-height: 300px;
    max-width: 300px;
}


.navigationSlider .slidingNav ul li.siteNavItemActive a {
    color: #fdf6e3;
}

.nav-footer {
    background-color: #002b36;
}

.nav-footer .sitemap .nav-home {
    height: 34px;
    opacity: 0.7;
    padding: 10px;
    transition: opacity 0.15s ease-in-out;
    width: 200px;
}


.blog .wrapper {
    max-width: 1400px;
}
.blog .post {
    max-width: 780px;
}

@media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
}

@media only screen and (min-width: 1024px) {
}

@media only screen and (max-width: 1023px) {
}

@media only screen and (min-width: 1400px) {
}

@media only screen and (min-width: 1500px) {
}

